# AutoGMDH

./: README.md  pyproject.toml
autogmdh/: __init__.py  core.py  demo.py
