[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogmdh"
version = "0.1.0"
description = "Advanced two-stage GMDH + NAS with weighted hybrid and stacked aggregators for transparent regression."
authors = [
  { name = "Balraj M", email = "balrajm7991@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "keras-tuner",
]

[project.urls]
Homepage = "https://github.com/balrajm/autogmdh"
Source = "https://github.com/balrajm/autogmdh"
